[package]
name = "wasm-webgl-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation"
]}